# nexus-flux

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS_GUIDE.md  EXAMPLES.md  INSTALLATION_GUIDE.md  LICENSE.md  MANIFEST.in  README.md  README_NEXUS_FLUX_FINAL.md  SECURITY.md  overview.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: agents.md  api.md  architecture.md  cli.md  concepts.md  contributing.md  engine.md  examples.md  installation.md  license.md  overview.md  postmortem.md  roadmap.md  security.md  state.md
src/: __init__.py  api.py  cli.py  config.py  engine.py
src/agents/: __init__.py  base.py  cognitive_agents.py
src/nexus_flux/: api.py  cli.py  config.py  consensus.py  engine.py  state.py
src/services/: __init__.py  llm_service.py  semantic_logger.py
src/state/: __init__.py  base.py  factory.py  memory.py  redis_backend.py
tests/: test_smoke.py
